# neurocoder

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/suites/: narrowcoder_v1_sample.jsonl
data/: classifier.py  ingest.py  licenses.py  manifest.py  synthetic.py
docs/: NEUROCODER_VNEXT_SESSION.md
eval/: adapters.py  benchmark.py  compare.py
hf_compat/: __init__.py  configuration_neurocoder.py  modeling_neurocoder.py  tokenization_neurocoder.py
infer/: __init__.py  api.py  diff_utils.py  schemas.py  service.py  validators.py
model/: config.py  tiny_moe.py
release/: __init__.py  hf_package.py  ollama_package.py  quantize.py
scripts/: align_responses.py  build_alignment_set.py  build_curriculum.py  build_groundup_dataset_v3.py  build_hf_mix_dataset.py  build_sft_dataset.py  build_taskfix_alignment_v4.py  build_training_mix_v4.py  check_contracts.py  check_determinism.py  gen_synthetic.py  infer_hf_standard.py  infer_neurocoder.py  package_release.py  run_api.py  run_benchmark.py  run_ingest.py  run_vnext_session.py  test_inference_suite.py  train_dryrun.py  train_from_scratch.py  train_sft_model.py  train_tokenizer.py
tests/: test_diff_utils.py  test_eval_compare.py  test_hf_tokenizer_guard.py  test_infer_neurocoder.py  test_ingest.py  test_model_torch.py  test_release.py  test_schemas.py  test_service.py  test_tokenizer.py  test_training_engine.py
tinymoe_coder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
train/: config.py  engine.py  preprocess.py  telemetry.py  tokenizer.py
train/configs/: sft.toml  (+2 more)
(+1 files in other folders)
